Added pages for creating recipes

--- a/Recipe_Sharing_Website/Components/Pages/Home.razor
+++ b/Recipe_Sharing_Website/Components/Pages/Home.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<h3>Home</h3>
 
-<h1>Hello, world!</h1>
+<p>RecipeHub is running.</p>
 
-Welcome to your new app.
+<p>
+    <a href="/recipes">Go to Recipes</a>
+</p>
