--- a/Recipe_Sharing_Website/Components/Layout/NavMenu.razor
+++ b/Recipe_Sharing_Website/Components/Layout/NavMenu.razor
@@ -1,30 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Recipe_Sharing_Website</a>
-    </div>
+﻿<div class="p-2 border-bottom mb-3">
+    <a href="/" class="me-3">Home</a>
+    <a href="/recipes" class="me-3">Recipes</a>
+    <a href="/recipes/create" class="me-3">Add Recipe</a>
+    <a href="/premium" class="me-3">Premium</a>
+    <a href="/admin" class="me-3">Admin</a>
+    <a href="/ingredients" class="me-3">Ingredients</a>
+    <a href="/login" class="me-3">Login</a>
+    <a href="/logout" class="me-3">Logout</a>
 </div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
