I updated the _Imports to enable "Interactive Server" and also added the antiforgery middle part or something like that. TL:DR, it works on my end now

--- a/Recipe_Sharing_Website/Components/_Imports.razor
+++ b/Recipe_Sharing_Website/Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using Recipe_Sharing_Website
 @using Recipe_Sharing_Website.Data
 @using Recipe_Sharing_Website.Models
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
