--- a/Recipe_Sharing_Website/Components/Layout/MainLayout.razor.css
+++ b/Recipe_Sharing_Website/Components/Layout/MainLayout.razor.css
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+   
 }
 
 main {
@@ -10,6 +11,8 @@ main {
 
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    width: 250px;
+    height: 100vh;
 }
 
 .top-row {
